# langchain-lab

./: .pdm-python  README.md  env.example  pyproject.toml  simple_chat_console.py
src/: __init__.py
src/langchain/: 002-runnable.py  002.1-runnable-challenge.py  simple_chat.py
src/langchain/001_runnable/: runnable.py  runnable_challenge.py
src/langchain/002_chat_models/: conversation.py  conversation_stream.py
src/langchain/002_chat_models_chains/: simple_chat.py
src/langchain/003_chains/: 003_chains.py
src/langchain/003_prompt_templates/: prompt_template.py
src/langchain/004_output_parsers/: output_parser.py
src/langchain/005_game_quizz/: game_quizz.py
