[project]
name = "langchain-lab"
version = "0.1.0"
description = "Laboratório para experimentar LangChain e outros frameworks de IA com PDM"
authors = [
    {name = "Eduardo Fabricio", email = "eduardo.fabricio@superbid.net"},
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0", 
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
# LangChain examples
simple-chat = "python -m src.langchain.simple_chat"
langchain-simple = "python src/langchain/simple_chat/main.py"

# Desenvolvimento
format = "black src/"
lint = "flake8 src/"
test = "pytest tests/"

# Legacy (manter por compatibilidade)
chat = "python simple_chat_console.py"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "dist", "build", ".venv"]
